Create Utils to Read and Parse GML File

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- Map -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDknfIyIe2z1fnRTkaJmCF6Jw3Np536mRs"></script>
 
+    <!-- Services -->
+    <script src="./assets/js/services/utils.js"></script>
+
     <!-- Controllers -->
     <script src="./assets/js/controllers/map.js"></script>
 
