Update Render Methods and Update Marker and Edges positions

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- Map -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDknfIyIe2z1fnRTkaJmCF6Jw3Np536mRs"></script>
 
+    <!-- Directives -->
+    <script src="./assets/js/directives/read-file.js"></script>
+
     <!-- Services -->
     <script src="./assets/js/services/utils.js"></script>
 
