--- a/index.html
+++ b/index.html
@@ -11,27 +11,13 @@
     <h1>UNS</h1>
     <div ui-view=""></div>
 
-    <!-- Angular -->
-    <script src="node_modules/angular/angular.min.js"></script>
-    <script src="node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
-    <script src="./assets/app.js"></script>
-
-    <!-- Bootstrap -->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Dependencies -->
+    <script src="./dist/angular.js"></script>
+    <script src="./dist/lib.js"></script>
+    <script src="./dist/app.js"></script>
 
     <!-- Map -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDknfIyIe2z1fnRTkaJmCF6Jw3Np536mRs"></script>
-
-    <!-- Directives -->
-    <script src="./assets/js/directives/read-file.js"></script>
-
-    <!-- Services -->
-    <script src="./assets/js/services/utils.js"></script>
-
-    <!-- Controllers -->
-    <script src="./assets/js/controllers/map.js"></script>
 
 </body>
 </html>
