Add CSS to Build

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>UNS - Universal Network Sketcher</title>
 
     <!-- CSS Dependencies -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/app.css" rel="stylesheet">
 </head>
 <body ng-app="uns">
     <h1>UNS</h1>
