Create Home Controller

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link href="dist/app.css" rel="stylesheet">
 </head>
 <body ng-app="uns">
-    <h1>UNS</h1>
     <div ui-view=""></div>
 
     <!-- Dependencies -->
-    <script src="./dist/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="./dist/lib.js"></script>
     <script src="./dist/app.js"></script>
 
