Update Home and Map Content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body ng-app="uns">
-    <div ui-view=""></div>
+    <ui-view></ui-view>
 
     <!-- Dependencies -->
     <script src="./dist/lib.js"></script>
