--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="assets/css/materialize.css" rel="stylesheet">
+    <link href="assets/css/print.css" rel="stylesheet">
     <link href="assets/css/icons.css" rel="stylesheet">
     <link href="assets/css/theme.css" rel="stylesheet">
 
